--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,28 @@
   "description": "backend API for PoS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "lint": "eslint src/**.js",
+    "test": "jest",
+    "coverage": "jest --collectCoverageFrom=src/**.js --coverage src"
   },
   "author": "Ranula Liyadipita",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "express": "^4.16.4",
     "http": "0.0.0",
     "jsonwebtoken": "^8.4.0",
     "nano": "^8.0.0",
     "nodemon": "^1.18.9"
+  },
+  "devDependencies": {
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.1.3",
+    "jest": "^23.6.0"
   }
 }
+
