--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,12 @@
     "bootstrap": "^4.2.1",
     "mdbreact": "^4.8.7",
     "react": "^16.7.0",
+    "react-bootstrap-counter": "^1.0.1",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-select": "^2.3.0",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
