order View Modifications

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,11 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "mdbreact": "^4.8.7",
+    "rc-input-number": "^4.3.8",
     "react": "^16.7.0",
     "react-bootstrap-counter": "^1.0.1",
     "react-dom": "^16.7.0",
+    "react-numeric-input": "^2.2.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
