--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "backend API for PoS",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "lint": "eslint src/**.js",
     "test": "jest",
     "coverage": "jest --collectCoverageFrom=src/**.js --coverage src"
@@ -20,7 +20,9 @@
     "http": "0.0.0",
     "jsonwebtoken": "^8.4.0",
     "nano": "^8.0.0",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "swagger-jsdoc": "^1.3.0",
+    "swagger-ui-express": "^4.0.2"
   },
   "devDependencies": {
     "eslint-plugin-import": "^2.14.0",
@@ -28,4 +30,3 @@
     "jest": "^23.6.0"
   }
 }
-
