--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,30 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+        {
+    "type": "chrome",
+    "request": "launch",
+    "name": "Launch Chrome",
+    "url": "http://localhost:3000",
+    "webRoot": "${workspaceFolder}"
+  },
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/frontend/src/components/OrderModal.js"
-        }
+            "name": "Backend",
+            "program": "${workspaceFolder}/backend/index.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Jest All",
+            "cwd": "${workspaceFolder}/backend/",
+            "program": "${workspaceFolder}/backend/node_modules/.bin/jest",
+            "args": ["--runInBand"],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "disableOptimisticBPs": true
+          }
     ]
 }
+
